# TDD

./: pyproject.toml
config/: settings.py
tdd_practice/: models.py
tdd_practice/migrations/: 0001_initial.py
tdd_practice/tests/: test_models.py
